--- a/app/templates/admin/auth/login.html
+++ b/app/templates/admin/auth/login.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static',filename="admin/img/apple-icon.png") }}"/>
     <link rel="icon" type="image/png" href="{{ url_for('static',filename="admin/img/favicon.ico") }}"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>N'Dalaba Diallo | Connection au l'administration</title>
+    <title>Nondi Guinée| Connection au l'administration</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
 
@@ -41,7 +41,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="{{url_for('front.index')}}"><b>N'Dalaba</b> DMN</a>
+    <a href="{{url_for('front.index')}}"><b>Nondi</b> GUINÉE</a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
