--- a/app/templates/admin/inc/header.html
+++ b/app/templates/admin/inc/header.html
@@ -2,7 +2,7 @@
         <!-- Logo -->
         <a href="{{url_for('admin.home')}}" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>D</b>MN</span>
+          <span class="logo-mini"><b>N</b>G</span>
           <!-- logo for regular state and mobile devices -->
           <span class="logo-lg"><b>ADMIN</b></span>
         </a>
