--- a/app/templates/admin/profils/profil.html
+++ b/app/templates/admin/profils/profil.html
@@ -56,33 +56,10 @@
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body">
-                        <strong><i class="fa fa-book margin-r-5"></i> Formations</strong>
-
-                        <p class="text-muted">
-                            {{ random.choice(current_user.educations).formation }}
-                        </p>
-
-                        <hr>
 
                         <strong><i class="fa fa-map-marker margin-r-5"></i> Adresse</strong>
 
                         <p class="text-muted">{{current_user.location}}</p>
-
-                        <hr>
-
-                        <strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>
-
-                        <p>
-                            {% for skill in current_user.skills%}
-                            <span class="label label-{{ random.choice(colors) }}">{{skill.skill}}</span>
-                            {% endfor %}
-                        </p>
-
-                        <hr>
-
-                        <strong><i class="fa fa-file-text-o margin-r-5"></i> Notes</strong>
-
-                        <p>{{current_user.bio | safe}}.</p>
                     </div>
                     <!-- /.box-body -->
                 </div>
@@ -92,39 +69,11 @@
             <div class="col-md-9">
                 <div class="nav-tabs-custom">
                     <ul class="nav nav-tabs">
-                        <li class="active"><a href="#activity" data-toggle="tab">Activités</a></li>
-                        <li><a href="#settings" data-toggle="tab">Réglage</a></li>
+                        <li class="active"><a href="#settings" data-toggle="tab">Réglage</a></li>
                         <li><a href="#passwords" data-toggle="tab">Mot de passe</a></li>
                     </ul>
                     <div class="tab-content">
-                        <div class="active tab-pane" id="activity">
-
-                            <div class="post clearfix">
-                                {% for activity in current_user.activities %}
-                                    <div class="user-block">                                
-                                        <span class="username">
-                                            <a>{{activity.description}}</a>
-                                            <a title="Supprimer l'activité?" href="{{url_for('admin.activities',uid=activity.uid)}}" class="pull-right btn-box-tool delete"><i class="fa fa-times"></i></a>
-                                        </span>
-                                        <span class="description">{{activity.created_at | datetimeformat}}</span>
-                                    </div>
-                                    <hr>
-                                {% endfor %}
-                                <form class="form-horizontal" action="{{url_for('admin.activities',uid='NULL')}}" method="POST">
-                                    <div class="form-group margin-bottom-none">
-                                        <div class="col-sm-10">
-                                            <input class="form-control input-sm" placeholder="Activité" name="activity">
-                                        </div>
-                                        <div class="col-sm-2">
-                                            <button type="submit" class="btn btn-danger pull-right btn-block btn-sm">Ajouter</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                          
-                        </div>
-
-                        <div class="tab-pane" id="settings">
+                        <div class="tab-pane active" id="settings">
                            {% include "admin/profils/edit_profil.html" %}
                         </div>
                         <div class="tab-pane" id="passwords">
