--- a/app/static/admin/css/custom.css
+++ b/app/static/admin/css/custom.css
@@ -2,6 +2,7 @@ body{font-size: 15px}
 .table-bordered>thead>tr>th,.table-bordered>tbody>tr>th{text-transform: uppercase}
 .skin-blue .main-header .navbar {background-color: #222d32;}
 .skin-blue .main-header .logo { background-color: #222d32;}
+.treeview-menu>li>a {padding: 5px 5px 5px 35px;}
 @media (max-width: 767px){
     .main-header .logo{display: none}
     .fixed .content-wrapper{padding-top: 50px}
