--- a/app/templates/admin/pages/form.html
+++ b/app/templates/admin/pages/form.html
@@ -1,14 +1,14 @@
-<form method="POST" action="{{ url }}" class="form-horizontal">
+<form method="POST" action="{{ url }}" class="form-horizontal" enctype="multipart/form-data">
     <div class="form-group row">
         <label class="col-sm-2 control-label">{{ form.title.label }}</label>
         <div class="col-sm-10">
-            {{ form.title(class='form-control',required='required',placeholder='Titre loisir') }}
+            {{ form.title(class='form-control',required='required',placeholder='Titre réalisation') }}
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-sm-2 control-label">{{ form.icon.label }}</label>
+        <label class="col-sm-2 control-label">{{ form.image.label }}</label>
         <div class="col-sm-10">
-            {{ form.icon(class='form-control',required='required',placeholder='Icon') }}
+            {{ form.image(class='form-control') }}
         </div>
     </div>
     <div class="form-group row">
@@ -19,13 +19,13 @@
         </label>
     </div>
     <div class="form-group row">
-        <label class="col-sm-2 control-label">Description</label>
+        <label class="col-sm-2 control-label">Contenu</label>
         <div class="col-sm-10">
-            {{ form.description(class='form-control') }}
+            {{ form.content(class='form-control summernote') }}
         </div>
     </div>
     <div class="modal-footer text-left">
         <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Enregistrer</button>
-        <a class="btn btn-default"  href="{{ url_for('admin.hobbies') }}"><i class="fa fa-times"></i> Annuler</a>
+        <a class="btn btn-default"  href="{{ url_for('admin.pages') }}"><i class="fa fa-times"></i> Annuler</a>
     </div>
 </form>
