--- a/app/templates/admin/persons/persons.html
+++ b/app/templates/admin/persons/persons.html
@@ -25,6 +25,7 @@
                         </div>
                         <!-- /.box-header -->
                         <div class="box-body">
+                        <div class="box-body table-responsive no-padding">
                             <table class="table table-bordered">
                                 <tbody>
                                 <tr>
@@ -58,6 +59,7 @@
                                 {% endfor %}
                                 </tbody>
                             </table>
+                        </div>
                         </div>
                     </div>
                 </div>
