--- a/app/templates/admin/videos/videos.html
+++ b/app/templates/admin/videos/videos.html
@@ -25,6 +25,7 @@
                         </div>
                         <!-- /.box-header -->
                         <div class="box-body">
+                        <div class="box-body table-responsive no-padding">
                             <table class="table table-bordered">
                                 <tbody>
                                 <tr>
@@ -57,6 +58,7 @@
                                 {% endfor %}
                                 </tbody>
                             </table>
+                        </div>
                         </div>
                         <div class="box-footer clearfix">
                             <ul class="pagination pagination-sm no-margin pull-right">
