--- a/app/templates/admin/inc/success_error.html
+++ b/app/templates/admin/inc/success_error.html
@@ -1,4 +1,6 @@
-<section class="content-header">
+{% with flash_message = get_flashed_messages()  %}
+    {% if flash_message %}
+        <section class="content-header">
 {% with errors = get_flashed_messages(category_filter=["error"]) %}
     {% if errors %}
         {%- for msg in errors %}
@@ -29,3 +31,5 @@
     {% endif %}
 {% endwith %}
 </section>
+    {% endif %}
+{% endwith %}
