--- a/app/templates/admin/articles/articles.html
+++ b/app/templates/admin/articles/articles.html
@@ -17,7 +17,7 @@
         </section>
 
         {% include "admin/inc/success_error.html" %}
-        <form action="" class="form-inline">
+        <form action="{{ url_for('admin.articles') }}" class="form-inline">
             <section class="content">
 
                 <div class="row">
@@ -28,7 +28,7 @@
                                 <div style="margin: 10px;float: right;">
                                     <div class="form-group">
                                         <!--<label>Sélectionnez l’action groupée</label>-->
-                                        <select name="action" class="form-control">
+                                        <select name="todo" class="form-control">
                                             <option value="9999">Actions groupées</option>
                                             <option value="-1">Supprimer</option>
                                             <option value="1">Publier</option>
@@ -39,13 +39,13 @@
                                         <input type="submit" name="doaction" id="doaction" class="btn btn-primary action" value="Appliquer">
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" name="titre" placeholder="titre actualite">
-                                        <select name="publie" class="form-control">
+                                        <input type="text" class="form-control" name="title" placeholder="titre actualite">
+                                        <select name="published" class="form-control">
                                             <option value="">Etat</option>
                                             <option value="1">Publiés</option>
                                             <option value="0">Non Publiés</option>
                                         </select>
-                                        <select name="une" class="form-control">
+                                        <select name="top" class="form-control">
                                             <option value="">position</option>
                                             <option value="1">Une</option>
                                             <option value="0">Normale</option>
@@ -76,7 +76,7 @@
                                         </tr>
                                         {% for article in articles %}
                                             <tr>
-                                                <td><input type="checkbox" name="post[]" value="{{ article.uid }}"/></td>
+                                                <td><input type="checkbox" name="uid" value="{{ article.uid }}"/></td>
                                                 <td>
                                                     <a href="{{ article.url }}" target="_blank" title="{{ article.title }}">{{ article.title }}</a>
                                                 </td>
