--- a/app/templates/admin/articles/articles.html
+++ b/app/templates/admin/articles/articles.html
@@ -39,21 +39,21 @@
                                         <input type="submit" name="doaction" id="doaction" class="btn btn-primary action" value="Appliquer">
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" name="title" placeholder="titre actualite">
+                                        <input type="text" class="form-control" name="title" placeholder="titre actualite"  value="{{ request.args.get('title') or "" }}" >
                                         <select name="published" class="form-control">
                                             <option value="">Etat</option>
-                                            <option value="1">Publiés</option>
-                                            <option value="0">Non Publiés</option>
+                                            <option value="1" {% if request.args.get('published') == '1' %} selected {% endif %}>Publiés</option>
+                                            <option value="0" {% if request.args.get('published') == '0' %} selected {% endif %}>Non Publiés</option>
                                         </select>
                                         <select name="top" class="form-control">
                                             <option value="">position</option>
-                                            <option value="1">Une</option>
-                                            <option value="0">Normale</option>
+                                            <option value="1"> {% if request.args.get('top') == '1' %} selected {% endif %}Une</option>
+                                            <option value="0" {% if request.args.get('top') == '0' %} selected {% endif %}>Normale</option>
                                         </select>
                                         <select name="category" id="category" class="form-control">
                                             <option value="">Selectionner une catégorie</option>
                                             {% for category in categories %}
-                                            <option value="{{ category.id }}">{{ category.title }}</option>
+                                            <option value="{{ category.id }}" {% if request.args.get('category') == category.id ~ ''%} selected {% endif %}>{{ category.title }}</option>
                                             {% endfor %}
                                         </select>
                                         <input type="submit" name="doaction" id="post-query-submit" class="btn btn-primary" value="Filtrer">
