--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static',filename="admin/img/apple-icon.png") }}"/>
     <link rel="icon" type="image/png" href="{{ url_for('static',filename="admin/img/favicon.ico") }}"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>N'Dalaba Diallo | {% block title %} {% endblock %}</title>
+    <title>Nondi administration | {% block title %} {% endblock %}</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
 
