--- a/app/templates/admin/persons/persons.html
+++ b/app/templates/admin/persons/persons.html
@@ -40,7 +40,7 @@
                                         <td>
                                             <a href="#" target="_blank" title="{{ person.name }}">{{ person.name }}</a>
                                         </td>
-                                        <td>{{ person.function }}</td>
+                                        <td>{{ person.fonction }}</td>
                                             <td><a href="{{url_for('static',filename=person.image)}}" target="_blank"><img width="50px" src="{{url_for('static',filename=person.image)}}" alt="{{ person.title }}"></a></td>
                                             {% if person.published %}
                                                 <td>
