--- a/app/templates/admin/persons/form.html
+++ b/app/templates/admin/persons/form.html
@@ -6,9 +6,9 @@
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-sm-2 control-label">{{ form.function.label }}</label>
+        <label class="col-sm-2 control-label">{{ form.fonction.label }}</label>
         <div class="col-sm-10">
-            {{ form.function(class='form-control',required='required',placeholder='Fonction') }}
+            {{ form.fonction(class='form-control',required='required',placeholder='Fonction') }}
         </div>
     </div>
     <div class="form-group row">
