--- a/app/templates/admin/users/form.html
+++ b/app/templates/admin/users/form.html
@@ -1,5 +1,4 @@
-<form class="form-horizontal" autocomplete="off" method="POST" action="{{url_for('admin.edit_profil')}}" enctype="multipart/form-data">
-
+<form method="POST" action="{{ url }}" class="form-horizontal" enctype="multipart/form-data">
     <div class="form-group row">
         <label class="col-md-3 form-control-label">{{ form.name.label }}</label>
         <div class="col-md-9">
@@ -9,11 +8,13 @@
     <div class="form-group row">
         <label class="col-md-3 form-control-label">{{ form.email.label }}</label>
         <div class="col-md-9">
-            {% if current_user.is_admin %}
-                {{ form.email(class='form-control', required='required',type='email') }}
-            {% else %}
-                {{ form.email(class='form-control', required='required',type='email',disabled='disabled') }}
-            {% endif %}
+            {{ form.email(class='form-control', required='required',type='email') }}
+        </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-md-3 form-control-label" for="password">Mot de passe</label>
+        <div class="col-md-9">
+            <input type="password" name="password" id="password" class="form-control" {% if user is none %}required{% endif %}/>
         </div>
     </div>
     <div class="form-group row">
@@ -41,8 +42,11 @@
             {{ form.photo(class='form-control') }}
         </div>
     </div>
-    
-    <div class="text-right">
-        {{form.submit(class='btn btn-primary')}}                               
+    <div class="modal-footer text-left">
+        <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Enregistrer</button>
+        <a class="btn btn-default" href="{{ url_for('admin.pages') }}"><i class="fa fa-times"></i> Annuler</a>
+        {% if user is not undefined %}
+            <a class="btn btn-default btn-sm delete" title="Supprimer la user?" href="{{ url_for('admin.delete_user',uid=user.uid) }}"><i class="fa fa-trash-o"></i></a>
+        {% endif %}
     </div>
 </form>
