--- a/app/templates/admin/inc/footer.html
+++ b/app/templates/admin/inc/footer.html
@@ -1,10 +1,10 @@
 <footer class="main-footer">
     <div class="pull-right hidden-xs">
-        <b>Version</b> 2.4.0
+       2.4.0
     </div>
-    <strong>Copyright &copy; 
+    <span>Copyright &copy;
     <script>
         document.write(new Date().getFullYear())
     </script> 
-    <a href="http://www.ndalaba.com">DMN</a>.</strong> Tout droit reservé
+    <a href="http://www.ndalaba.com">DMN</a>.</span>
 </footer>
