--- a/app/templates/admin/users/form.html
+++ b/app/templates/admin/users/form.html
@@ -1,4 +1,11 @@
 <form method="POST" action="{{ url }}" class="form-horizontal" enctype="multipart/form-data">
+     <div class="form-group row">
+        <label class="col-md-3 form-control-label">Activé</label>
+        <label for="activated" class="minimal col-sm-9">
+            {{ form.activated() }}
+            Activé
+        </label>
+    </div>
     <div class="form-group row">
         <label class="col-md-3 form-control-label">{{ form.name.label }}</label>
         <div class="col-md-9">
@@ -20,7 +27,7 @@
     <div class="form-group row">
         <label class="col-md-3 form-control-label">{{ form.phone.label }}</label>
         <div class="col-md-9">
-            {{ form.phone(class='form-control', required='required') }}
+            {{ form.phone(class='form-control') }}
         </div>
     </div>
     <div class="form-group row">
@@ -29,7 +36,6 @@
             {{ form.facebook(class='form-control') }}
         </div>
     </div>
-
     <div class="form-group row">
         <label class="col-md-3 form-control-label">{{ form.location.label }}</label>
         <div class="col-md-9">
@@ -46,7 +52,7 @@
         <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Enregistrer</button>
         <a class="btn btn-default" href="{{ url_for('admin.pages') }}"><i class="fa fa-times"></i> Annuler</a>
         {% if user is not undefined %}
-            <a class="btn btn-default btn-sm delete" title="Supprimer la user?" href="{{ url_for('admin.delete_user',uid=user.uid) }}"><i class="fa fa-trash-o"></i></a>
+            <a class="btn btn-danger btn-sm delete" title="Supprimer la user?" href="{{ url_for('admin.delete_user',uid=user.uid) }}"><i class="fa fa-trash-o"></i></a>
         {% endif %}
     </div>
 </form>
