working on home page

--- a/app/templates/front/inc/footer.html
+++ b/app/templates/front/inc/footer.html
@@ -19,15 +19,17 @@
 
                 <div class="col-md-3">
                     <div class="footer_widget">
-                        <div class="footer_widget_title"><h2>Discover</h2></div>
+                        <div class="footer_widget_title"><h2>Lien</h2></div>
 					    <div class="footer_menu_item ">
 						<div class="row">
 							<div class="col-sm-12">
-								<ul class="nav navbar-nav ">
-									<li><a href="../navbar/">Baseball</a></li>
-									<li><a href="../navbar-static-top/">Football</a></li>
-									<li><a href="../navbar-static-top/">Football</a></li>
-								</ul>
+                                <ul class="nav navbar-nav ">
+                                    <li><a href="https://nondi.org">ACCUEIL</a></li>
+                                    <li><a href="https://nondi.org/agir">AGIR</a></li>
+                                    <li><a href="https://nondi.org/guinee">CHANGEONS</a></li>
+                                    <li><a href="https://nondi.org/actualites">ACTUALITÉS</a></li>
+                                    <li><a href="https://nondi.org/nous-contacter">CONTACT</a></li>
+                                </ul>
 						    </div>
 				      	</div><!--row-->
 			      	</div><!--footer_menu_item-->
@@ -38,7 +40,11 @@
                     <div class="text_widget footer_widget">
                         <div class="footer_widget_title"><h2>Message administrateur</h2></div>
                         <img src="{{ url_for('static',filename='front/images/auteur.jpg') }}" title="N'Dalaba Diallo" alt="auteur">
-                        <div class="footer_widget_content">Collaborativelyadministrate empowered marketsplug-and-play networks. Dynamic procrastinate after.marketsplug-and-play networks. Dynamic procrastinate users after. Dynamic procrastinateafter. marketsplug-and-play networks. Dynamic procrastinate users after...</div>
+                        <div class="footer_widget_content">
+                            Nondi Guinée est une plateforme d’alerte et de dénonciation de la mauvaise gouvernance, de l'injustice, de la discrimination....
+                            en vue de susciter l’éveil de la conscience citoyenne et d'inciter le peuple à ne plus se laisser faire.
+                            Il faut agir et maintenant.
+                        </div>
                     </div>
                 </div><!--col-xs-3-->
             </div><!--row-->
@@ -50,7 +56,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="copyright">
-                        © Copyright 2019 - Tout droit reservé. Par: <a href="https://ndalaba.com" title="Diallo Mamadou N'Dalaba" target="_blank">DMN</a>
+                        © Copyright <span id="copyright_date"></span> - Tout droit reservé. Par: <a href="https://ndalaba.com" title="Diallo Mamadou N'Dalaba" target="_blank">DMN</a>
                     </div>
                 </div><!--col-xs-6-->
                 <div class="col-md-4">
