--- a/app/templates/front/base.html
+++ b/app/templates/front/base.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Diallo Mamadou N'Dalaba">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,700|Roboto:400,500" rel="stylesheet">
-    <link rel="shortcut icon" href="{{ url_for('static',filename="images/logo.png") }}">
-    <title>{% block title %}{% endblock %}</title>
+    <link rel="shortcut icon" href="{{ url_for('static',filename="front/images/favico.png") }}">
+    <title>{% block title %}Nondi Guinée{% endblock %}</title>
     <meta property="og:title" content="{% block ogtitle %}Nondi Guinée{% endblock %}"/>
-    <meta property="og:image" content="{% block ogimage %}{{ url_for('static',filename="images/logo.png") }}{% endblock %}"/>
+    <meta property="og:image" content="{% block ogimage %}{{ url_for('static',filename="front/images/logo.png") }}{% endblock %}"/>
     <meta property="og:description" content="{% block ogdescription %}Nondi Guinée{% endblock %}"/>
     <meta property="og:type" content="article"/>
     <meta property="og:url" content="https://nondi.org"/>
@@ -34,6 +34,8 @@
 <body>
     <div id="main-wrapper">
         {% include "front/inc/header.html" %}
+        {% block content %}
+        {% endblock %}
         {% include "front/inc/footer.html" %}
     </div>
     {% block javascript %}
